# wagtail-bynder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: publish.yml  ruff.yml  test.yml
src/wagtail_bynder/: __init__.py  apps.py  blocks.py  exceptions.py  middleware.py  models.py  utils.py  wagtail_hooks.py  widgets.py
src/wagtail_bynder/management/commands/: base.py  refresh_bynder_images.py  update_all_documents.py  update_all_videos.py  update_stale_documents.py  update_stale_images.py  update_stale_videos.py
src/wagtail_bynder/static/bynder/js/: compactview-v4.0.0.js  compactview-v4.js  video-chooser-modal.js  video-chooser-telepath.js  video-chooser.js
src/wagtail_bynder/static/wagtailadmin/js/: chooser-modal-handler-factory.js
src/wagtail_bynder/static/wagtaildocs/js/: document-chooser-modal.js
src/wagtail_bynder/static/wagtailimages/js/: image-chooser-modal.js
src/wagtail_bynder/templates/wagtailadmin/: admin_base.html
src/wagtail_bynder/templates/wagtailadmin/chooser/: chooser-bynder.html
src/wagtail_bynder/templatetags/: bynder_tags.py
src/wagtail_bynder/views/: document.py  image.py  mixins.py  video.py
tests/: test_bynderassetcopymixin.py  test_document_chooser_views.py  test_image_chooser_views.py  test_management_commands.py  test_models.py  test_utils.py  test_video_chooser_views.py  test_wagtail_overrides.py  utils.py
tests/testapp/: apps.py  factories.py  models.py  settings.py  urls.py
tests/testapp/migrations/: 0001_initial.py  0002_remove_customdocument_bynder_id_hash_and_more.py  0003_alter_customdocument_options_alter_video_options.py
